          process to complete before continuing in case of encountering GOTOs 
          or EXIT /b command. This led to an unnecessary "zombie" process and 
          could easilly lead to unexpected behaviours since no synchronisation 
          interface was provided by Dos9.

          This issue has been fixed by forcing Dos9 to wait for the process 
          launched by FOR to exit before resuming execution. Note that it 
          doesn't change the overall FOR behaviour, that is, both processes 
          are ran assynchronously (ie. at the same time), which is different 
          from cmd behaviour.

TUESDAY 21TH, MARCH

        - Fixed some typos that caused some minor bugs depending on 
          contfiguration.

        - Fixed a minor bug of the DIR command that was not ignoring case when 
          dealing with disk letters.

        - Fixed a misimplementation of the START command when not using libcu8 
          (nor Linux).

        - Made the /b switch working with unices.

WEDNESDAY 29TH, MARCH

        - Fixed some error in file search handling (the origin folder of a 
          static string was not added to matches, as if DOS9_DIR_MODE was the 
          default behaviour).

THURSDAY 30TH MARCH

        - Fixed a bug with FOR command that created more variable that it it 
          was necessary when using a joker * as the final token specifier.

        - Fixed bug with Dos9_ShowErrorMessage() function that called the dos9 
          exit function twice, causing a SEGFAULT.

        - Fixed the START command :

             - Fixed problems with transmission of Dos9 attributes.

             - Fixed handling of the title parameter.

        - Fixed an implementation error which resulted in misinterpreted 
          delayed expansion when variable name started with a number.

        - Fixed block parsing systems.

SUNDAY 2ND APRIL

        - Fixed a compilation error on *NIXes. 
