@@ -1612,3 +1612,5 @@ ${for %%a in (*.exe) do echo %%a}
 	- Fixed lots of bugs caused by the new parsing system.
 	
 	- Fixed some errors of the {for} and {call} command.
+	
+	- Fixed the {TYPE} to make it capable of handling binary files.
