@@ -55,7 +55,8 @@ ${TYPE [fichier ...]}
 	soient interprétés en tant que codes d'échapement ANSI (en fonction
 	de l'émulateur de console), ou casser les codes ANSI utilisés par
 	{dos9|Dos9}, causant ainsi des comportements innatendus, qui
-	n'affectent cependant que l'affichage.
+	n'affectent cependant que l'affichage. Si la sortie de {TYPE} est
+    redirigée, alors il est possible d'afficher des fichiers binaires. 	
 
 	Sous les systèmes de type UNIX, il n'est pas possible d'afficher le
 	contenu d'un dossier (les dossiers sont des fichiers sous les systèmes
